--- a/index.html
+++ b/index.html
@@ -10,14 +10,10 @@
 <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
-
-<style>
-body{font-family:'Tajawal',sans-serif}
-</style>
+<style>body{font-family:'Tajawal',sans-serif}</style>
 </head>
 
 <body class="bg-gradient-to-br from-emerald-50 via-teal-50 to-cyan-50 min-h-screen p-4">
-
 <div class="max-w-6xl mx-auto space-y-6">
 
 <!-- HEADER -->
@@ -45,20 +41,14 @@ body{font-family:'Tajawal',sans-serif}
 <!-- FORM -->
 <div class="bg-white rounded-2xl shadow p-6">
 <h2 class="font-bold mb-4">Tambah Transaksi</h2>
-
 <form id="form" class="space-y-4">
 
 <div class="grid sm:grid-cols-2 gap-4">
 <input id="tanggal" type="date" required class="border p-2 rounded">
 <select id="kategori" required class="border p-2 rounded">
 <option value="">Pilih Kategori</option>
-<option>Operasional</option>
-<option>Infaq</option>
-<option>Konsumsi</option>
-<option>Dekorasi</option>
-<option>Dokumentasi</option>
-<option>Hadiah</option>
-<option>Lain-lain</option>
+<option>Operasional</option><option>Infaq</option><option>Konsumsi</option>
+<option>Dekorasi</option><option>Dokumentasi</option><option>Hadiah</option><option>Lain-lain</option>
 </select>
 </div>
 
@@ -69,7 +59,7 @@ body{font-family:'Tajawal',sans-serif}
 <input id="keluar" type="number" placeholder="Pengeluaran" class="border p-2 rounded">
 </div>
 
-<button class="bg-emerald-600 hover:bg-emerald-700 text-white w-full py-2 rounded font-bold transition">
+<button class="bg-emerald-600 hover:bg-emerald-700 text-white w-full py-2 rounded font-bold">
 💾 Simpan Transaksi
 </button>
 </form>
@@ -83,7 +73,6 @@ body{font-family:'Tajawal',sans-serif}
 
 <!-- TABEL -->
 <div class="bg-white rounded-2xl shadow p-6">
-
 <div class="flex flex-wrap gap-3 mb-4">
 <button onclick="exportExcel()" class="bg-blue-600 text-white px-4 py-2 rounded">📥 Export Excel</button>
 <button onclick="exportWord()" class="bg-indigo-600 text-white px-4 py-2 rounded">📄 Export Word</button>
@@ -102,84 +91,57 @@ body{font-family:'Tajawal',sans-serif}
 <tbody id="tabel"></tbody>
 </table>
 </div>
-
 </div>
 
 </div>
 
 <script>
-const KEY="TPQ_KHOTMIL_QURAN_V4";
+const KEY="TPQ_KHOTMIL_QURAN_V6";
 let data=JSON.parse(localStorage.getItem(KEY))||[];
 let chart=null;
-
 const $=id=>document.getElementById(id);
-
 $("tanggal").value=new Date().toISOString().split("T")[0];
 
 function rupiah(n){
- return new Intl.NumberFormat("id-ID",{style:"currency",currency:"IDR",minimumFractionDigits:0}).format(n);
+ return new Intl.NumberFormat("id-ID",{style:"currency",currency:"IDR",minimumFractionDigits:0}).format(n||0);
 }
-
 function simpan(){localStorage.setItem(KEY,JSON.stringify(data));}
 
 function render(){
  $("tabel").innerHTML="";
  let masuk=0,keluar=0,saldo=0;
-
  data.sort((a,b)=>new Date(a.tgl)-new Date(b.tgl));
-
  const labels=[],arrMasuk=[],arrKeluar=[];
-
  data.forEach((d,i)=>{
   masuk+=d.masuk; keluar+=d.keluar; saldo+=d.masuk-d.keluar;
-
-  labels.push(d.tgl);
-  arrMasuk.push(d.masuk);
-  arrKeluar.push(d.keluar);
-
+  labels.push(d.tgl); arrMasuk.push(d.masuk); arrKeluar.push(d.keluar);
   $("tabel").innerHTML+=`
   <tr class="border-b">
-   <td>${d.tgl}</td>
-   <td>${d.kat}</td>
-   <td>${d.ket}</td>
+   <td>${d.tgl}</td><td>${d.kat}</td><td>${d.ket}</td>
    <td class="text-right text-green-600">${d.masuk?rupiah(d.masuk):"-"}</td>
    <td class="text-right text-red-600">${d.keluar?rupiah(d.keluar):"-"}</td>
    <td class="text-right font-semibold">${rupiah(saldo)}</td>
    <td><button onclick="hapus(${i})" class="text-red-500">Hapus</button></td>
   </tr>`;
  });
-
  $("totalMasuk").textContent=rupiah(masuk);
  $("totalKeluar").textContent=rupiah(keluar);
  $("saldo").textContent=rupiah(masuk-keluar);
-
  renderChart(labels,arrMasuk,arrKeluar);
 }
 
 function renderChart(labels,masuk,keluar){
  const ctx=$("grafik").getContext("2d");
  if(chart) chart.destroy();
-
  const g1=ctx.createLinearGradient(0,0,0,300);
- g1.addColorStop(0,"rgba(34,197,94,.7)");
- g1.addColorStop(1,"rgba(34,197,94,.05)");
-
+ g1.addColorStop(0,"rgba(34,197,94,.7)"); g1.addColorStop(1,"rgba(34,197,94,.05)");
  const g2=ctx.createLinearGradient(0,0,0,300);
- g2.addColorStop(0,"rgba(239,68,68,.7)");
- g2.addColorStop(1,"rgba(239,68,68,.05)");
-
- chart=new Chart(ctx,{
-  type:"line",
-  data:{labels,datasets:[
-   {label:"Pemasukan",data:masuk,fill:true,backgroundColor:g1,borderColor:"#22c55e",tension:.45,pointRadius:4},
-   {label:"Pengeluaran",data:keluar,fill:true,backgroundColor:g2,borderColor:"#ef4444",tension:.45,pointRadius:4}
-  ]},
-  options:{
-   responsive:true,
-   animation:{duration:1200,easing:"easeOutQuart"},
-   plugins:{legend:{labels:{usePointStyle:true}}},
-   scales:{y:{ticks:{callback:v=>rupiah(v)}}}
-  }
+ g2.addColorStop(0,"rgba(239,68,68,.7)"); g2.addColorStop(1,"rgba(239,68,68,.05)");
+ chart=new Chart(ctx,{type:"line",data:{labels,datasets:[
+ {label:"Pemasukan",data:masuk,fill:true,backgroundColor:g1,borderColor:"#22c55e",tension:.45},
+ {label:"Pengeluaran",data:keluar,fill:true,backgroundColor:g2,borderColor:"#ef4444",tension:.45}
+ ]},
+ options:{responsive:true,animation:{duration:1200},scales:{y:{ticks:{callback:v=>rupiah(v)}}}}
  });
 }
 
@@ -187,87 +149,53 @@ $("form").addEventListener("submit",e=>{
  e.preventDefault();
  const masuk=Number($("masuk").value)||0;
  const keluar=Number($("keluar").value)||0;
-
- if(!$("kategori").value||!$("keterangan").value){
-  alert("Lengkapi data");return;
- }
-
- data.push({
-  tgl:$("tanggal").value,
-  kat:$("kategori").value,
-  ket:$("keterangan").value,
-  masuk,keluar
- });
-
- simpan(); render(); e.target.reset();
- $("tanggal").value=new Date().toISOString().split("T")[0];
+ if(!$("kategori").value||!$("keterangan").value){alert("Lengkapi data");return;}
+ data.push({tgl:$("tanggal").value,kat:$("kategori").value,ket:$("keterangan").value,masuk,keluar});
+ simpan(); render(); e.target.reset(); $("tanggal").value=new Date().toISOString().split("T")[0];
 });
 
-function hapus(i){
- if(confirm("Hapus transaksi?")){
-  data.splice(i,1); simpan(); render();
- }
-}
-
-function resetData(){
- if(confirm("Hapus SEMUA data?")){
-  data=[]; simpan(); render();
- }
-}
+function hapus(i){if(confirm("Hapus transaksi?")){data.splice(i,1);simpan();render();}}
+function resetData(){if(confirm("Hapus SEMUA data?")){data=[];simpan();render();}}
 
 function exportExcel(){
  if(!data.length) return alert("Tidak ada data");
- const ws=XLSX.utils.json_to_sheet(data);
+ let saldo=0;
+ const rows=data.map(d=>{
+  saldo+=d.masuk-d.keluar;
+  return {Tanggal:d.tgl,Kategori:d.kat,Keterangan:d.ket,Masuk:d.masuk,Keluar:d.keluar,Saldo:saldo};
+ });
+ const ws=XLSX.utils.json_to_sheet(rows);
  const wb=XLSX.utils.book_new();
  XLSX.utils.book_append_sheet(wb,ws,"Laporan");
- XLSX.writeFile(wb,"laporan-keuangan.xlsx");
+ XLSX.writeFile(wb,"laporan-keuangan-khotmil-quran.xlsx");
 }
 
-<script>
 function exportWord(){
- const t=new Date().toLocaleDateString("id-ID",{
-   day:"numeric",month:"long",year:"numeric"
- });
-
+ const t=new Date().toLocaleDateString("id-ID",{day:"numeric",month:"long",year:"numeric"});
+ let saldo=0;
  let html=`
  <h2 style="text-align:center">LAPORAN KEUANGAN KHOTMIL QUR'AN KE-20</h2>
- <p style="text-align:center">
-   TPQ MIFTAHUL ULUM<br>
-   Pondok Pesantren Al-Mubarok Lanbulan
- </p>
-
- <table border="1" width="100%" cellpadding="5" cellspacing="0" style="border-collapse:collapse">
- <tr>
-   <th>Tanggal</th><th>Kategori</th><th>Keterangan</th>
-   <th>Masuk</th><th>Keluar</th>
- </tr>`;
-
+ <p style="text-align:center">TPQ MIFTAHUL ULUM<br>Pondok Pesantren Al-Mubarok Lanbulan</p>
+ <table border="1" width="100%" cellpadding="5" cellspacing="0">
+ <tr><th>Tanggal</th><th>Kategori</th><th>Keterangan</th><th>Masuk</th><th>Keluar</th><th>Saldo</th></tr>`;
  data.forEach(d=>{
-  html+=`
-   <tr>
-    <td>${d.tgl}</td>
-    <td>${d.kat}</td>
-    <td>${d.ket}</td>
-    <td>${rupiah(d.masuk)}</td>
-    <td>${rupiah(d.keluar)}</td>
-   </tr>`;
+  saldo+=d.masuk-d.keluar;
+  html+=`<tr><td>${d.tgl}</td><td>${d.kat}</td><td>${d.ket}</td><td>${rupiah(d.masuk)}</td><td>${rupiah(d.keluar)}</td><td>${rupiah(saldo)}</td></tr>`;
  });
-
- html+=`
- </table>
-
- <br><br>
- <div style="text-align:right; margin-top:40px">
-   Lanbulan : ${t}<br><br>
-   Bendahara Acara<br>
-   <b>UST. ABU BAKAR ASSHIDDIQ</b>
+ html+=`</table><br><br>
+ <div style="text-align:right">
+ Lanbulan : ${t}<br><br>
+ Bendahara Acara<br>
+ <b>UST. ABU BAKAR ASSHIDDIQ</b>
  </div>`;
-
  const blob=new Blob(['\ufeff',html],{type:'application/msword'});
  const a=document.createElement("a");
  a.href=URL.createObjectURL(blob);
  a.download="laporan-keuangan-khotmil-quran.doc";
  a.click();
 }
-</script>
 
+render();
+</script>
+</body>
+</html>
